# synthv1

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Makefile.git  Makefile.in  Makefile.svn  README  README.cmake  README.windows.md  TODO  configure.ac  synthv1.1  synthv1.pro  synthv1.spec.in  synthv1_jack.pro  synthv1_lv2.pro  synthv1_lv2ui.pro  synthv1_ui.pro
debian/: changelog  control  copyright  docs  rules  synthv1-common.install  synthv1-jack.docs  synthv1-jack.install  synthv1-lv2.install  synthv1.install
rpm/: synthv1.spec
src/: CMakeLists.txt  cmake_config.h  cmake_config.h.in  config.h.cmake  src.pri.in  src_core.pri.in  src_core.pro  src_jack.pri.in  src_jack.pro  src_lv2.pri.in  src_lv2.pro  src_lv2ui.pro  src_ui.pri.in  src_ui.pro  synthv1.cpp  synthv1.desktop  synthv1.desktop.in  synthv1.h  synthv1.qrc  synthv1_config.cpp  synthv1_config.h  synthv1_control.cpp  synthv1_control.h  synthv1_controls.cpp  synthv1_controls.h  synthv1_filter.h  synthv1_formant.cpp  synthv1_formant.h  synthv1_fx.h  synthv1_jack.cpp  synthv1_jack.h  synthv1_list.h  synthv1_lv2.cpp  synthv1_lv2.h  synthv1_lv2ui.cpp  synthv1_lv2ui.h  synthv1_nsm.cpp  synthv1_nsm.h  synthv1_param.cpp  synthv1_param.h  (+50 more)
src/appdata/: org.rncbc.synthv1.desktop  org.rncbc.synthv1.metainfo.xml  org.rncbc.synthv1.xml  synthv1.appdata.xml
src/lv2/: lv2_external_ui.h  lv2_port_change_request.h  lv2_programs.h
src/man1/: synthv1.1  synthv1.fr.1
src/mimetypes/: org.rncbc.synthv1.xml
src/synthv1.lv2/: manifest.ttl  manifest.ttl.in  synthv1.ttl  synthv1.ttl.in  synthv1_ui-qt5.ttl  synthv1_ui-win32.ttl  synthv1_ui.ttl  synthv1_ui.ttl.in
src/synthv1_windows.lv2/: manifest.ttl  synthv1.ttl  synthv1_ui.ttl
